--- a/activator.properties
+++ b/activator.properties
@@ -2,3 +2,6 @@ name=sbt-jmh-seed
 title=SBT runnable JMH benchmarks
 description=This template includes the sbt-jmh plugin, which allows you to benchmark your Scala code. JMH is the best micro benchmarking tool available, and is developed by the OpenJDK team themselves.
 tags=sbt,benchmark,jmh,performance,testing
+authorLink=http://blog.project13.pl
+authorLogo=https://avatars0.githubusercontent.com/u/120979?s=200
+authorTwitter=ktosopl
